tests/NormalTests/paczka1/fuzzy1/95231142.err
Error in line 6: S119 A308 48,0
Error in line 16: RkMMJ5 S119 20,9
Error in line 8: S119 S119 60,4
Error in line 25: S119 S466 7,7
Error in line 32: ZGVDVaR S351 26,37
Error in line 29: S119 A308 568,9
